src/page/BlogPage/BlogContent/BlogContent.css
.blog-content__header {
    width: fit-content;
    width: 100%;
}

.blog-content__side-components {
    animation: fade-in--up .5s ease-in-out
}

.blog-content {
    --padding-left-right: min( 5vw, 500px );
    --padding-top-bottom: min( 3vh, 200px );
    --margin-top: min(2vh, 200px);
    flex-grow: 3; flex-shrink: 1; flex-basis: 800px;
    max-width: 900px;
    padding: var(--padding-top-bottom) var(--padding-left-right);
    margin-top: var( --margin-top );
    display: flex;
    align-items: center;
    flex-direction: column;
    background: rgb(238, 238, 238);
    backdrop-filter: blur(2px);
    border-radius: 12px;
    border: .1px solid #CCC
}

.blog-content-body {
    border-bottom: 1px #CCC solid;
    width: 100%;
    border-radius: .5vh;
    font-size: clamp(1rem, 1.4vw, 1.2rem);
    text-decoration: none;
    color: #000;
    transition: background .3s ease-in;
}

.blog-content__header>h1 {
    margin-bottom: 12px;
}

.blog-content-body>h1 {
    display: none
}


.blog-content-body img {
    width: 98%;
    border-radius: 12px;
}

.blog-content__image {
    --blog-content__image-top-bottom-margin: min(10vh, 25px);
    width: 98%;
    height: min(30vh, 400px);
    margin: var(--blog-content__image-top-bottom-margin) var(--blog-content__image-top-bottom-margin);
    object-fit: cover;
    border-radius: 12px;
}

.blog-content__header {
    width: 80%;
}

.blog-content--author-image {
    width: 40px;
    height: 40px;
    margin-right: min(10px,3vw)
}

.blog-content__wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
}

.table-of-content--small-screen {
    display: none
}


@media screen and (max-width: 1200px) {
    .blog-content__side-components {
        display: none
    }
}

@media screen and (max-width: 1000px) {
    .table-of-content--small-screen {
	      display: flex
    }

    .blog-content {
        width: 100%
    }
}

.table-wrapper {
    width: 100%;
    overflow-x: auto
}

table {
    font-size: .95rem;
    border-collapse: collapse;
    z-index: 2;
    border: .1px solid #CCC;
    overflow: hidden;
    box-shadow: 0 0 20px rgba(220,200,190,0.1);
}

th, td {
    padding: 15px;
    background-color: rgba(255,255,255,0.2);
    color: #000;
}

th {
    text-align: left;
}

td, tr, th {
    transition: background-color .3s ease-in-out;
}

thead th {
    background: var(--dark-mode-purple-2);
    color: #FFF
}

tbody tr:hover {
    background-color: rgba(190,200,255,0.5)
}

tbody td {
    position: relative;
}

tbody td:hover:before {
    content: "";
    position: absolute;
    left: 0; right: 0;
    top: -9999px;
    bottom: -9999px;
    background-color: rgba(180,200,255,0.2);
    z-index: -1
}

